SERVER-3097 -- "mongod --install" uses wrong image path depending on CWD

Use GetModuleFileName() to get path of running exe.